[package]
name = "yeast-rs"
version = "0.1.0"
edition = "2018"
authors = [
    "Cfir Tsabari <cfir16@gmail.com>",
]
documentation = "https://docs.rs/yeast-rs"
keywords = ["yeast", "unique","id", "async"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CfirTsabari/yeast-rs"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
async-std-runtime = ["async-std"]
tokio-runtime = ["tokio"]

[dependencies]
chrono="0.4.19"
base64="0.13.0"
lazy_static="1.4.0"
async-std = {version="1.9.0",optional=true}
tokio = {version="1.8.1",features=["sync","rt"],optional=true}

[dev-dependencies]
async-std = {version="1.9.0",features=["attributes"]}
serial_test = "0.5.1"