[package]
name = "yeast-rs"
version = "0.3.0"
description = "Tiny but linear growing unique id generator."
edition = "2018"
authors = [
    "Cfir Tsabari <cfir16@gmail.com>",
]
documentation = "https://docs.rs/yeast-rs"
keywords = ["yeast", "unique","id", "async","growing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CfirTsabari/yeast-rs"
exclude = [
    "rust-toolchain",
    ".github/*",
    ".gitignore",

]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
async-std-runtime = ["async-std"]
tokio-runtime = ["tokio"]

[dependencies]
chrono="0.4.19"
lazy_static="1.4.0"
async-std = {version="1.9.0",optional=true}
tokio = {version="1.8.1",features=["sync"],optional=true}

[dev-dependencies]
async-std = {version="1.9.0",features=["attributes"]}
serial_test = "0.7.0"
criterion = { version= "0.3.4", features=["async_tokio","async_std"]}
tokio = {version="1.8.1",features=["rt","rt-multi-thread"]}

[[bench]]
name = "benchmark"
harness = false